finished logging.
